--- a/modules/_requestbuilder_.html
+++ b/modules/_requestbuilder_.html
@@ -111,7 +111,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L501">requestBuilder.ts:501</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L504">requestBuilder.ts:504</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -160,7 +160,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L520">requestBuilder.ts:520</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L523">requestBuilder.ts:523</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
@@ -201,7 +201,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L516">requestBuilder.ts:516</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L519">requestBuilder.ts:519</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -251,7 +251,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L457">requestBuilder.ts:457</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L460">requestBuilder.ts:460</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -301,7 +301,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L295">requestBuilder.ts:295</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L298">requestBuilder.ts:298</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -336,7 +336,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L335">requestBuilder.ts:335</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L338">requestBuilder.ts:338</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -365,13 +365,13 @@
 					<a name="buildbatchputinput" class="tsd-anchor"></a>
 					<h3>build<wbr>Batch<wbr>Put<wbr>Input</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
-						<li class="tsd-signature tsd-kind-icon">build<wbr>Batch<wbr>Put<wbr>Input<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a>, items<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">BatchWriteItemInput</span></li>
+						<li class="tsd-signature tsd-kind-icon">build<wbr>Batch<wbr>Put<wbr>Input<span class="tsd-signature-symbol">(</span>tableSchema<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a>, items<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">BatchWriteItemInput</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L270">requestBuilder.ts:270</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L273">requestBuilder.ts:273</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -385,7 +385,7 @@
 									<h5>tableSchema: <a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a></h5>
 								</li>
 								<li>
-									<h5>items: <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></h5>
+									<h5>items: <span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">[]</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>the items to put</p>
 									</div>
@@ -406,7 +406,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L373">requestBuilder.ts:373</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L376">requestBuilder.ts:376</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -448,7 +448,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L165">requestBuilder.ts:165</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L168">requestBuilder.ts:168</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -489,7 +489,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L86">requestBuilder.ts:86</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L89">requestBuilder.ts:89</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -530,7 +530,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L102">requestBuilder.ts:102</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L105">requestBuilder.ts:105</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -562,7 +562,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L188">requestBuilder.ts:188</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L191">requestBuilder.ts:191</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -614,7 +614,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L28">requestBuilder.ts:28</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L28">requestBuilder.ts:28</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -647,7 +647,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L250">requestBuilder.ts:250</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L253">requestBuilder.ts:253</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -684,7 +684,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L424">requestBuilder.ts:424</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L427">requestBuilder.ts:427</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -715,7 +715,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L598">requestBuilder.ts:598</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L601">requestBuilder.ts:601</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -747,7 +747,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L576">requestBuilder.ts:576</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L579">requestBuilder.ts:579</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -781,7 +781,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L586">requestBuilder.ts:586</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L589">requestBuilder.ts:589</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -815,7 +815,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L563">requestBuilder.ts:563</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L566">requestBuilder.ts:566</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -844,7 +844,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L633">requestBuilder.ts:633</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L636">requestBuilder.ts:636</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -870,7 +870,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L644">requestBuilder.ts:644</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/3cd323c/src/requestBuilder.ts#L647">requestBuilder.ts:647</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
